<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/activity_login"
        android:textSize="32sp"
        android:layout_marginTop="80dp"/>

    <EditText
        android:id="@+id/email_field_auth"
        android:layout_marginTop="40dp"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/email_default"/>

    <EditText
        android:id="@+id/password_field_auth"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:hint="@string/password_default"/>

    <Button
        android:id="@+id/login_button_auth"
        android:layout_marginTop="20dp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/login"/>

    <Button
        android:id="@+id/signup_button_auth"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/sign_up"/>

    <Button
        android:id="@+id/back_button_auth"
        android:layout_marginTop="240dp"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/back"/>

</LinearLayout>