<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:orientation="horizontal"
        android:layout_weight="1"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        >

        <ImageButton
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/profile_username"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="2"
            android:layout_gravity="center"
            android:text="@string/default_username"
            android:textSize="20sp"
            android:gravity="center"/>

    </LinearLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_weight="3"
        android:paddingTop="50dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <Button
            android:id="@+id/back_button_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/back"/>
        <Button
            android:id="@+id/login_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/back_button_profile"
            android:layout_marginTop="200dp"
            android:visibility="visible"
            android:text="@string/login"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>