<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    >

    <TextView
        android:id="@+id/habit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/default_habit_name"
        android:textSize="40sp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/habit_name"/>
    <TextView
        android:id="@+id/habit_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintTop_toBottomOf="@id/habit_name"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:text="@string/default_habit_description"
        android:textSize="20sp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@id/habit_description"/>

    <TextView
        android:id="@+id/textview_periodicity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/habit_description"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginTop="40dp"
        android:text="@string/periodicity"
        android:textSize="20sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textview_notification_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/textview_periodicity"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/notification"
        android:textSize="20sp"
        android:gravity="center"/>
    <TextView
        android:id="@+id/textview_tag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toBottomOf="@id/textview_notification_time"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:text="@string/tag"
        android:textSize="20sp"
        android:gravity="center"/>

    <Spinner
        android:id="@+id/spinner_periodicity"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toEndOf="@id/textview_periodicity"
        app:layout_constraintTop_toBottomOf="@id/habit_description"
        android:layout_marginTop="40dp"
        android:entries="@array/periodicity_options"
        />
    <TextView
        android:id="@+id/textview_periodicity_set"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="@id/spinner_periodicity"
        app:layout_constraintStart_toStartOf="@id/spinner_periodicity"
        android:text="@string/periodicity"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="invisible"/>
    <EditText
        android:id="@+id/edittext_notification_time"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autofillHints="00:00"
        android:hint="00:00"
        android:inputType="time"
        android:maxLength="5"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintStart_toEndOf="@id/textview_periodicity"
        app:layout_constraintTop_toBottomOf="@id/spinner_periodicity"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintWidth_percent="0.40" />
    <TextView
        android:id="@+id/textview_notification_time_set"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="@id/edittext_notification_time"
        app:layout_constraintStart_toStartOf="@id/edittext_notification_time"
        android:text="@string/notification"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="invisible"/>
    <Spinner
        android:id="@+id/spinner_tag"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent=".07"
        app:layout_constraintStart_toEndOf="@id/textview_tag"
        app:layout_constraintTop_toBottomOf="@+id/edittext_notification_time"
        android:entries="@array/tag_options"
        />
    <TextView
        android:id="@+id/textview_tag_set"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.40"
        app:layout_constraintHeight_percent="0.07"
        app:layout_constraintTop_toTopOf="@id/spinner_tag"
        app:layout_constraintStart_toStartOf="@id/spinner_tag"
        android:text="@string/tag"
        android:textSize="20sp"
        android:gravity="center"
        android:visibility="invisible"/>

    <TextView
        android:id="@+id/activity_check"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintHeight_percent="0.1"
        android:layout_marginStart="60dp"
        android:layout_marginEnd="60dp"
        android:paddingTop="20dp"
        android:textAlignment="center"
        android:text="@string/default_activity_check"
        app:layout_constraintTop_toBottomOf="@id/textview_tag"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/yes_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.30"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/activity_check"
        app:layout_constraintStart_toStartOf="@id/activity_check"
        android:layout_marginStart="10dp"
        android:text="@string/yes"
        android:visibility="invisible"
        />
    <Button
        android:id="@+id/no_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.30"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/activity_check"
        app:layout_constraintStart_toEndOf="@id/yes_button"
        android:layout_marginStart="20dp"
        android:text="@string/no"
        android:visibility="invisible"
        />

    <Button
        android:id="@+id/try_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.64"
        app:layout_constraintHeight_percent="0.15"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/try_button"/>
    <Button
        android:id="@+id/dismiss_button"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintWidth_default="percent"
        app:layout_constraintHeight_default="percent"
        app:layout_constraintWidth_percent="0.31"
        app:layout_constraintHeight_percent="0.15"
        android:layout_marginRight="5dp"
        android:layout_marginLeft="5dp"
        android:text="@string/dismiss_button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>